# implmod

./: PLan.xlsx  Plan.txt  README.md
Biblio/Lsyst mesh/: lsystems.ppt
Code/: CMakeLists.txt  Controls.txt
Code/Apps/AnimationEditor/: AnimationEditorApp.cpp
Code/Apps/Editor/: SkeletalImplicitRay.cpp
Code/Apps/GekkoSkinnedAnimation/: GekkoSkinned.cpp
Code/Apps/LateSkinning/: CMakeLists.txt
Code/Apps/MetaBallEditor/: CMakeLists.txt  MetaBallEditor.cpp
Code/Apps/TextureSkinning/: CMakeLists.txt  TextureSkinning.cpp
Code/Apps/VewerGlobal/: CMakeLists.txt
Code/Apps/Viewer/: CMakeLists.txt  Viewer.cpp
Code/Models/: AnimatedSpine.anim  AnimatedSpine.skl  Canard.anim  Canard.skl  Gekkoskinned.anim  Gekkoskinned.skl  Monster.skl  TRex2.skl  TRexAnim1.skl  malien.skl  man.skl  spider.skl  tree.skl
Code/Models/Done/: Gekko.skl  GekkoRigged.skl  Gekkoskinned.skl  TRex1.skl  TRex2.skl
Code/Tests/PrimitiveSplitting/: CMakeLists.txt  PrimitiveSplitTest.cpp
Code/shaders/: TextureSkinning.frag  raytrace.frag  raytrace.vert  raytraceBall.frag  raytraceBall.vert  raytraceRaster.vert  raytraceSphereTracing.frag  raytraceTube.frag  raytraceTubeAndBall.frag  raytraceTubeInterpAndBall.frag
Code/shaders/MorePrimsFaster/: raytrace.frag
Code/shaders/MorePrimsNoRetraverseSlow/: raytrace.frag
Code/shaders/MorePrimsSlow/: raytrace.frag
Code/shaders/hole07-19/: raytrace.frag
Code/shaders/letssee/: raytrace.frag
Code/shaders/pseudoSphTrcompletetraverse/: raytrace.frag  raytraceRaster.frag
Code/src/SklImp/: Animation.cpp  Animation.h  BVH.cpp  BVH.h  BlobOperator.cpp  BvhUtils.cpp  BvhUtils.h  CMakeLists.txt  HyperTexture.cpp  HyperTexture.h  MetaPrimitive.h  MetaTube.cpp  MetaTube.h  Metaball.cpp  Metaball.h  SkeletalImplicit.cpp  SkeletalImplicit.h  SkeletalImplicitModel.cpp  SkeletalImplicitModel.h  Skeleton.cpp  Skeleton.h  TextureProjector.cpp  TextureProjector.h
Code/src/UI/: AnimationEditor.cpp  AnimationEditor.h  CMakeLists.txt  DisplayText.cpp  IEditor.cpp  IEditor.h  Input.cpp  Input.h  MainEditor.cpp  MainEditor.h  MyGLViewController.cpp  MyGLViewController.h  MyQuatTrackBall.cpp  MyQuatTrackBall.h  RigEditor.cpp  RigEditor.h  SkeletonEditor.cpp  SurfaceEditor.cpp  SurfaceEditor.h  TextureEditor.cpp
Code/src/Utils/: CMakeLists.txt  DrawUtils.cpp  DrawUtils.h  RayCastUtils.h
Paper/: template.aux  template.bbl  template.blg  template.prg  template.tex
RayTraceImplicit/: CMakeLists.txt  RayTraceImplicit.cpp
RayTraceImplicit/shaders/: raytrace.frag  raytrace.vert
Release/MetaBallEditor/: Controls.txt
Release/MetaBallEditor/shaders/: raytraceBall.frag  raytraceBall.vert
ReportFinal/: curvature.aux  curvature.blg  curvature.tex  default_packages.sty  delaunay.aux  prog2tex.a01992
SkeletalImplicit/: Animation.cpp  Animation.h  AnimationEditor.cpp  AnimationEditor.h  BVH.cpp  BVH.h  BlobOperator.h  BlobPrimitive.cpp  BlobPrimitive.h  BvhUtils.cpp  BvhUtils.h  CMakeLists.txt  DisplayText.cpp  DisplayText.h  IEditor.cpp  IEditor.h  Input.h  MainEditor.cpp  MainEditor.h  MetaPrimitive.cpp  MetaPrimitive.h  MetaTube.cpp  MetaTube.h  Metaball.cpp  Metaball.h  RayCastUtils.cpp  Singleton.h  SkeletalImplicit.cpp  SkeletalImplicit.h  SkeletalImplicitModel.h  SkeletalImplicitRay.cpp  Skeleton.cpp  Skeleton.h  SkeletonEditor.h  SurfaceEditor.cpp  SurfaceEditor.h  TextureEditor.cpp  TextureEditor.h  TextureProjector.cpp  TextureProjector.h  (+1 more)
SkeletalImplicit/Models/: Guy.anim  Guy.skl  Monster.anim  Monster.skl  Spine.anim  Star.skl  Test.anim
SkeletalImplicit/shaders/: raytrace.frag  raytrace.vert  raytraceRaster.frag
doc/: references.bib
doc/Convolution surfaces notes/pictures/: Thumbs.db
doc/Convolution surfaces notes/report/: main.aux  main.blg  main.dvi  main.tex
doc/IdeasGPURaytace/pictures/: Thumbs.db
doc/IdeasGPURaytace/report/: main.aux  main.bbl  main.blg  main.dvi  main.ps  main.tex  prog2tex.a02900
doc/Implicit texturing notes/pictures/: Thumbs.db
doc/Implicit texturing notes/report/: main.aux  main.htm  main.tex  prog2tex.sty
doc/MetaRayTrace notes/pictures/: Thumbs.db
doc/MetaRayTrace notes/report/: main.aux  main.bbl  main.blg  main.dvi  main.prg  main.tex  prog.cpp
doc/MotivGoalsPlan/pictures/: Thumbs.db
doc/MotivGoalsPlan/report/: main.aux  main.bbl  main.blg  main.tex
doc/ReportFinal/: curvature.bbl  curvature.prg  lastpage.sty  references.bib  titlepage.tex
doc/week7/pictures/: Thumbs.db
doc/week7/report/: main.aux  main.bbl  main.blg  main.tex  references.bib
figs/: Thumbs.db  bisect.ipe  bisect1.eps  bisect2.ipe  miss.ipe
figs/WorkFlow/: Thumbs.db
presentation/: Book1.xlsx  Real Time Rendering of Skeletal Implicit Surfaces.pptx  timing.txt  ~$Real Time Rendering of Skeletal Implicit Surfaces.pptx
